# python-learnings

./: .pre-commit-config.yaml  Untitled.ipynb  linting_configs.json  pyproject.toml
airflow/: README.md  airflow.cfg  airflow.db
airflow/dags/: dag_python_op.py  dag_taskflow.py  dag_with_catchup_and_backfill.py  dag_with_cron.py  first_dag.py
airflow/logs/scheduler/: latest
clean_architecture/: README.md  pythonsqlite.db  run.py
clean_architecture/db_init/: create_table.sql  db_connection.py
clean_architecture/src/data/interfaces/: users_repo_interface.py
clean_architecture/src/data/tests/: user_finder_spy.py  user_register_spy.py
clean_architecture/src/data/use_cases/: user_finder.py  user_finder_test.py  user_register.py  user_repository_test.py
clean_architecture/src/domain/models/: users.py
clean_architecture/src/domain/use_cases/: user_finder.py  user_registry.py
clean_architecture/src/errors/types/: __init__.py  http_bad_request_error.py  http_not_found_error.py
clean_architecture/src/main/adapters/: request_adapter.py  response_adapter.py
dataclasses/: dataclasses.ipynb
mongo_db/: raw.py  run.py
mongo_db/models/configs/: mongodb_configs.py
mongo_db/models/connection_options/: connection.py
mongo_db/models/repository/: collection_handler.py
pydantic/: pydantic.ipynb
unit_tests/: README.md
unit_tests/pytest/: conftest.py  functions.py  test_classes.py  test_functions.py  test_parametrize.py  test_xfail.py
unit_tests/shopping_cart/: item_database.py  shopping_cart.py  test_shopping_cart.py
(+18 files in other folders)
