[tool.poetry]
name = "python-learnings"
version = "0.1.0"
description = ""
authors = ["felipedmnq-artefact <felipe.vasconcelos@artefact.com>"]
readme = "README.md"
packages = [{include = "python_learnings"}]

[tool.poetry.dependencies]
python = "^3.10"
pymongo = "^4.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
