[tool.poetry]
name = "python-learnings"
version = "0.1.0"
description = ""
authors = ["felipedmnq-artefact <felipe.vasconcelos@artefact.com>"]
readme = "README.md"
packages = [{include = "python_learnings"}]

[tool.poetry.dependencies]
python = "^3.10"
pymongo = "^4.3.3"
pre-commit = "^3.3.3"
sqlalchemy = "^2.0.17"
pytest = "^7.4.0"
pydantic = {extras = ["email"], version = "^2.0"}
black = "^23.3.0"
flask = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
